# polymarket-tui

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  envrc-example  justfile  release-plz.toml  test_slug_extraction
.cursor/rules/git-workflow/: RULE.md
.github/workflows/: ci.yml  publish.yml  release-plz.yml  release.yml
crates/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: auth.rs  display_trait.rs  main.rs  trending_tui.rs  tui.rs  tui_log_layer.rs
crates/cli/src/trending_tui/: event_loop.rs  fetch.rs  keys.rs  layout.rs  logging.rs  mod.rs  render.rs  state.rs
crates/cli/src/trending_tui/render/: event_details.rs  events_list.rs  mod.rs  orderbook.rs  utils.rs  yield_tab.rs
crates/cli/tests/: cli_runs.rs
crates/polymarket-api/: CHANGELOG.md  Cargo.toml
crates/polymarket-api/src/: cache.rs  clob.rs  data.rs  display.rs  gamma.rs
crates/polymarket-api/tests/: clob_test.rs  data_test.rs  gamma_test.rs  messages_test.rs  types_test.rs  websocket_message_test.rs  websocket_test.rs
crates/polymarket-bot/: Cargo.toml
crates/polymarket-bot/src/: cache.rs  clob.rs  data.rs  display.rs  error.rs  gamma.rs  lib.rs  rtds.rs  websocket.rs
crates/polymarket-bot/src/websocket/: messages.rs  mod.rs  types.rs
crates/polymarket-bot/tests/: clob_test.rs  data_test.rs  gamma_test.rs  greet.rs  messages_test.rs  types_test.rs  websocket_message_test.rs  websocket_test.rs
crates/polymarket-tui/: Cargo.toml
crates/polymarket-tui/src/: cache.rs  clob.rs  display.rs  gamma.rs  lib.rs  rtds.rs
crates/polymarket-tui/src/websocket/: messages.rs  mod.rs  types.rs
crates/polymarket-tui/tests/: clob_test.rs  data_test.rs  gamma_test.rs  messages_test.rs  types_test.rs  websocket_message_test.rs  websocket_test.rs
