[package]
name = "polymarket-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "polymarket-cli"
path = "src/main.rs"

[features]
default = []
tui = ["ratatui", "crossterm"]

[dependencies]
polymarket-tui = { path = "../polymarket-tui", features = ["tracing"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
ratatui = { version = "0.27", optional = true }
crossterm = { version = "0.28", optional = true }
chrono = "0.4"
