[package]
name = "polymarket-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "polymarket-cli"
path = "src/main.rs"

[features]
default = []
tui = ["ratatui", "crossterm", "unicode-width"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "polymarket-api/tracing"]

[dependencies]
polymarket-api = { path = "../polymarket-api" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"], optional = true }
ratatui = { version = "0.27", optional = true }
crossterm = { version = "0.28", optional = true }
unicode-width = { version = "0.2", optional = true }
chrono = "0.4"
