[package]
name = "polymarket-api"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Rust client library for Polymarket REST and WebSocket APIs"
repository = "https://github.com/penso/polymarket-tui"
homepage = "https://github.com/penso/polymarket-tui"
readme = "../../README.md"
keywords = ["polymarket", "api", "trading", "prediction-markets", "websocket"]
categories = ["api-bindings", "web-programming"]

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"
urlencoding = "2.1"
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", optional = true }
dirs = "5.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
