[package]
name = "polymarket-bot"
version = "0.1.0"
edition = "2021"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
urlencoding = "2.1"
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", optional = true }
dirs = "5.0"
